[gd_scene load_steps=14 format=3 uid="uid://dw2hy41yku55t"]

[ext_resource type="Script" uid="uid://bmyj55roxjirb" path="res://scenes/ui/end_screen/end_screen.gd" id="1_44brl"]
[ext_resource type="PackedScene" uid="uid://det84xm3xjv2b" path="res://scenes/ui/sound_button/sound_button.tscn" id="2_20hmq"]
[ext_resource type="Texture2D" uid="uid://diex0gm6424mx" path="res://scenes/global/coin_anim_f0.png" id="2_6055c"]
[ext_resource type="AudioStream" uid="uid://18n84urjofxu" path="res://assets/audio/jingles/victory2.ogg" id="3_7t06w"]
[ext_resource type="Texture2D" uid="uid://33n31ygn0ha7" path="res://scenes/global/coin_anim_f1.png" id="3_hufuo"]
[ext_resource type="AudioStream" uid="uid://b54kid4s4myyg" path="res://assets/audio/jingles/game_over3.ogg" id="4_kyrhy"]
[ext_resource type="Texture2D" uid="uid://1rdqvkko0ueb" path="res://scenes/global/coin_anim_f2.png" id="4_tb5rc"]
[ext_resource type="Texture2D" uid="uid://bsvq7ckuejxf6" path="res://scenes/global/coin_anim_f3.png" id="5_041vu"]

[sub_resource type="Animation" id="Animation_jvc53"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_au74e"]
resource_name = "in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_b2av2"]
resource_name = "out"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0v1sm"]
_data = {
&"RESET": SubResource("Animation_jvc53"),
&"in": SubResource("Animation_au74e"),
&"out": SubResource("Animation_b2av2")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_8qm4d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6055c")
}, {
"duration": 1.0,
"texture": ExtResource("3_hufuo")
}, {
"duration": 1.0,
"texture": ExtResource("4_tb5rc")
}, {
"duration": 1.0,
"texture": ExtResource("5_041vu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_44brl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0v1sm")
}
autoplay = "in"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.84, 0, 0.434, 0.619608)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="GameResultLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GoldTextLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Gold + 1"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
position = Vector2(53.3532, 6.11099)
scale = Vector2(1.7, 1.7)
sprite_frames = SubResource("SpriteFrames_8qm4d")
autoplay = "default"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="RestartButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_20hmq")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Restart"

[node name="QuitToMenuButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_20hmq")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Quit
"

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7t06w")
volume_db = -5.0

[node name="DefeatSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kyrhy")
volume_db = -10.0

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/QuitToMenuButton" to="." method="_on_quit_button_pressed"]
